k8s_definitions/ses_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ses-email-service-deployment
  namespace: ses-email-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ses-email-service
  template:
    metadata:
      labels:
        app: ses-email-service
    spec:
      containers:
      - name: ses-email-service
        image: liquidfish/ses-email-service:latest
        volumeMounts:
        - name: ssl
          mountPath: "/ssl"
          readOnly: true
        ports:
        - containerPort: 1025
      volumes:
      - name: ssl
        secret:
          secretName: email-liquidfish-xyz-tls
